syntax = "proto3";

package ibc_attestor;

option go_package = "types/attestor";

// Attestation is a single attestation from a given block height for the requested data.
message Attestation {
  // The height of the attestation
  uint64 height = 1;
  // The timestamp of the block
  optional uint64 timestamp = 2;
  // The attested data
  bytes attested_data = 3;
  // The attestation signature
  bytes signature = 4;
  // The attestor Ethereum address (20 bytes)
  bytes address = 5;
}
